Vaadin updated to latest version. Bug fixed, teacher attendance, missing translation keys added, for example present absent. Updated UserContentLoader with sonarlint suggestions. And updated some of the files with sonarlint suggestions.